  * Clicking on a link whilst holding the Cmd key opens the link in the background. (Aaron Dodson) (#12129)
  * Added Imgur as a supported image uploading service. (Shayne Sweeney) (#13186)
  * Removed kl.am as a supported url shortener service. (Shawn Khan) (#14412)
  * Fixed link insertion for NetNewsWire. (#11389)
  * Added Google Chrome support for link insertion.

 Transcript Viewer
 * Added next/previous buttons for highlighted search terms within a transcript (similar to Safari).

 AIM
  * Added a preference for AIM: "allow multiple sign in locations" defaulting to true. (Josh Perry) (#5790)

 IRC
  * Added a preference to stay in group chats with window closed. (Albert Zeyer) (#12068)
  
 XMPP
  * Added support for supported characters in Jabber IDs. (Marc Kalmes) (#13099(

 Xtras
  * Added version numbers for Xtras to Xtras Manager. (Ariel Chinn) (#11285)

 * Added the "On Accounts" table to the nextKeyView in the 'Add Contact' window. (#14269)

 * Added a menu item to view release notes in the help menu. (#8569)
 * Miscellaneous improvements to Copyright.txt file.
 * Debug logging: All GLib's errors and messages, and all exceptions are now logged to the Debug Window.


Version 1.4.2 (X/X/201X)
 * Updated to libpurple 2.x.x. Highlights of applicable changes:
   * 

 Logging
  * Added a "Log only certain accounts" setting to Adium's "General" preferences. (#8)
  * Added a "Log secure chats" setting to Adium's "General" preferences. (#94)
  * Renamed "Save opened chats when quitting" setting to "Reopen chats from last time on startup" for clarity. (#14651)

 Message View
  * Only display focus indication for group chats. (#14420)
  * Fixed issue where sections of conversations loaded from message history are repeated. (#13362)
  * Mockie: new mention and focus indicators. (#14420)
  * Fixed Renkoo to not scroll to bottom on new content regardless of scroll position. (#14331)
  * Fixed Stockholm's breaking with RTL text. (#10403)